# acpp11-501_exercises

./: README.md
.github/workflows/: build-target.yaml
exercises/solutions/01_core_concepts/src/: main.cpp
exercises/solutions/02_hardware_manipulation/src/: main.cpp
exercises/solutions/03_user_defined_types/src/: main.cpp
exercises/solutions/03_user_defined_types/tests/: CMakeLists.txt  step_tests.cpp
exercises/solutions/04_arrays_iterators/src/: Step.cpp  Step.h  main.cpp
exercises/solutions/05_hardware_objects/src/: GPIO.cpp  GPIO.h  Step.h  main.cpp
exercises/solutions/05_hardware_objects/tests/: CMakeLists.txt  gpio_tests.cpp  step_tests.cpp
exercises/solutions/06_composite_objects/src/: Step.h  WashProgramme.cpp  WashProgramme.h  main.cpp
exercises/solutions/07_connecting_objects/src/: GPIO.h  Motor.h  SevenSegment.h  WashProgramme.cpp  WashProgramme.h  main.cpp
exercises/solutions/08_substituable_objects/src/: GPIO.cpp  Motor.cpp  SevenSegment.cpp  SevenSegment.h  Step.h  WashProgramme.cpp  WashProgramme.h  WashStep.cpp  WashStep.h  main.cpp
exercises/solutions/09_realising_interfaces/src/: GPIO.h  Motor.h  OutputDevice.h  SevenSegment.h  Step.cpp  WashProgramme.cpp  WashProgramme.h  WashStep.h  main.cpp
exercises/solutions/10_container_algorithms/src/: Console.cpp  Console.h  GPIO.h  Motor.cpp  Motor.h  OutputDevice.h  SevenSegment.cpp  Step.h  WashProgramme.cpp  WashProgramme.h  WashStep.h  main.cpp
exercises/solutions/10_containers/src/: WashProgramme.cpp  WashProgramme.h  main.cpp
exercises/solutions/11_algorithms/src/: Motor.h  SevenSegment.cpp  SevenSegment.h  WashProgramme.cpp  WashProgramme.h  main.cpp
exercises/solutions/11_move_semantics/src/: Motor.cpp  Motor.h  WashProgramme.cpp
exercises/solutions/11_resource_management/src/: GPIO.h  WashProgramme.cpp  main.cpp
exercises/solutions/12_move_semantics/src/: WashProgramme.h  main.cpp
exercises/solutions/12_smart_pointers/src/: SevenSegment.h  Step.cpp  WashProgramme.h  WashStep.cpp  main.cpp
exercises/solutions/13_smart_pointers/src/: GPIO.cpp
exercises/solutions/13_template_classes/src/: Buffer.h  Console.h  GPIO.cpp  SevenSegment.cpp  SevenSegment.h  main.cpp
exercises/solutions/13_template_classes/tests/: Buffer_tests.cpp  CMakeLists.txt
exercises/solutions/14_perfect_forwarding/src/: GPIO.h  Motor.cpp  OutputDevice.h  SevenSegment.cpp  Step.h  main.cpp
exercises/solutions/14_perfect_forwarding/tests/: Buffer_tests.cpp  CMakeLists.txt
exercises/solutions/14_template_classes/src/: WashProgramme.cpp  WashProgramme.h  WashStep.h
exercises/solutions/15_interrupts/src/: WashProgramme.cpp  WashStep.h
exercises/solutions/15_perfect_forwarding/src/: Buffer.h  GPIO.h  Step.h  WashStep.h  main.cpp
exercises/solutions/16_interrupts/src/: SerialPort.cpp  SerialPort.h  Step.h  main.cpp
exercises/templates/buffer/src/: Buffer.h  main.cpp
